--- a/templates/jobs/job_list.html
+++ b/templates/jobs/job_list.html
@@ -119,7 +119,8 @@
                                             <span class="badge bg-success ms-2">Télétravail</span>
                                         {% endif %}
                                     </p>
-                                    <p class="card-text">{{ job.description|truncatewords:20 }}</p>
+                                    <p class="card-text d-none d-md-block">{{ job.description|truncatewords:20 }}</p>
+                                    <p class="card-text d-md-none">{{ job.description|truncatewords:10 }}</p>
                                 </div>
                             </div>
                             
@@ -140,13 +141,16 @@
                                 </small>
                             </div>
                             
-                            <div class="d-flex flex-column gap-2">
+                            <div class="d-flex flex-column flex-md-column flex-sm-row gap-2">
                                 <a href="{% url 'jobs:job_detail' job.slug %}" class="btn btn-primary">
                                     <i class="fas fa-eye me-2"></i>Voir l'offre
                                 </a>
                                 {% if user.is_authenticated and user.user_type == 'candidate' %}
-                                <button class="btn btn-outline-primary save-job-btn" data-job-id="{{ job.id }}">
+                                <button class="btn btn-outline-primary save-job-btn d-none d-md-block" data-job-id="{{ job.id }}">
                                     <i class="far fa-heart me-2"></i>Sauvegarder
+                                </button>
+                                <button class="btn btn-outline-primary save-job-btn d-md-none" data-job-id="{{ job.id }}">
+                                    <i class="far fa-heart"></i>
                                 </button>
                                 {% endif %}
                             </div>
