--- a/templates/base.html
+++ b/templates/base.html
@@ -16,10 +16,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    
+    <!-- CORRECTION : Chargement correct des fichiers static -->
+    {% load static %}
+    
     <!-- Custom CSS -->
-    <link href="{% load static %}{% static 'css/custom.css' %}" rel="stylesheet">
+    <link href="{% static 'css/custom.css' %}" rel="stylesheet">
     <!-- Mobile Optimizations -->
-    <link href="{% load static %}{% static 'css/mobile.css' %}" rel="stylesheet">
+    <link href="{% static 'css/mobile.css' %}" rel="stylesheet">
     
     <!-- Dynamic Theme Colors -->
     {% if active_theme %}
@@ -278,9 +282,8 @@
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Custom JS -->
-    <script src="{% load static %}{% static 'js/custom.js' %}"></script>
+    <script src="{% static 'js/custom.js' %}"></script>
     
     {% block extra_js %}{% endblock %}
 </body>
 </html>
-
